--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>wmc</title>
+    <title>WeMediaChain</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/css.css">
 </head>
@@ -14,7 +14,9 @@
         <nav>
             <div class="nav clearfix">
                 <div class="left">
-                    <img src="./img/login.png" />
+                    <a href="#">
+                        <img src="./img/login.png" />
+                    </a>
                 </div>
                 <div class="right">
                     <ul>
@@ -93,7 +95,7 @@
                     <p>条件达成自动释放</p>
                 </div>
                 <div class="unit" style="margin-right: 0;">
-                    <img src="./img/Transfer.png" />
+                    <img src="img/transfer.png" />
                     <h3>权益转让</h3>
 
                     <p class="topP">收益安全转移</p>
