--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div class="btnBox clearfix">
                 <a class="btn left">下载钱包</a>
-                <a class="btn right">查看白皮书</a>
+                <a class="btn right" href="./wmc-whitepaper-alpha-0.5.pdf" target="_blank">查看白皮书</a>
             </div>
         </div>
     </div>
