add release link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="time">2018.01.20</p>
 
             <div class="btnBox clearfix">
-                <a class="btn left">下载钱包</a>
+                <a class="btn left" href="https://github.com/WeMediaChain/wallet-core/releases/tag/v0.0.1" target="_blank">下载钱包</a>
                 <a class="btn right" href="./wmc-whitepaper-alpha-0.5.pdf" target="_blank">查看白皮书</a>
             </div>
         </div>
