add github organization link

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <h3>相关链接</h3>
                     <a href="https://www.mengxiaozhu.cn/" target="_blank">萌小助</a>
                     <br>
-                    <a href="#">Github</a>
+                    <a href="https://github.com/WeMediaChain" target="_blank">Github</a>
                 </div>
                 <div class="right">
                     <h3>联系我们</h3>
