--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
 <head>
+	
 	<meta charset="UTF-8">
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>WeMediaChain</title>
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/css.css">
 </head>
