--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<p class="time">正在进行</p>
 		
 		<div class="btnBox clearfix">
-			<a class="btn left" href="https://github.com/WeMediaChain/wallet-core/releases" target="_blank">下载钱包</a>
+			<a class="btn left" href="#" target="_blank">下载钱包</a>
 			<a class="btn right" href="./wmc-whitepaper-alpha-0.5.pdf" target="_blank">查看白皮书</a>
 		</div>
 	</div>
