--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<p class="time">正在进行</p>
 		
 		<div class="btnBox clearfix">
-			<a class="btn left" href="#" target="_blank">下载钱包</a>
+			<a class="btn left" href="https://token.im/" target="_blank">支持imToken</a>
 			<a class="btn right" href="./wmc-whitepaper-alpha-0.5.pdf" target="_blank">查看白皮书</a>
 		</div>
 	</div>
@@ -213,6 +213,7 @@
 			<div class="left">
 				<h3>相关链接</h3>
 				<a href="https://github.com/WeMediaChain" target="_blank">Github</a>
+				<a href="https://etherscan.io/token/0x47427a4921bdf2b3ac75ecf53193a5265af4a12f" target="_blank">智能合约</a>
 			</div>
 			<div class="right">
 				<h3>联系我们</h3>
