更新白皮书

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 		<div class="btnBox clearfix">
 			<a class="btn left" href="https://token.im/" target="_blank">支持imToken</a>
-			<a class="btn right" href="./wmc-whitepaper-alpha-0.5.pdf" target="_blank">查看白皮书</a>
+			<a class="btn right" href="./wmc-whitepaper-alpha-0.6.pdf" target="_blank">查看白皮书</a>
 		</div>
 	</div>
 </div>
@@ -217,7 +217,7 @@
 			</div>
 			<div class="right">
 				<h3>联系我们</h3>
-				<span><a href="http://wemediachain.one">官网</a></span>
+				<span><a href="https://wmc.pub">官网</a></span>
 			</div>
 		</div>
 	</div>
