--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
 			<div class="right">
 				<h3>联系我们</h3>
 				<span><a href="https://wmc.pub">官网</a></span>
+				<span><a href="https://t.me/WeMediaChain">Telegram官方群</a></span>
 			</div>
 		</div>
 	</div>
