--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
 			</div>
 			<div class="right">
 				<h3>联系我们</h3>
-				<a href="https://wmc.pub">官网</a>
-				<a href="https://t.me/WeMediaChain">Telegram官方群</a>
+				<a href="https://t.me/WeMediaChain" target="_blank">Telegram官方群</a>
 			</div>
 		</div>
 	</div>
