new contract & 0.7 whitepaper

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 		<div class="btnBox clearfix">
 			<a class="btn left" href="https://token.im/" target="_blank">支持imToken</a>
-			<a class="btn right" href="./wmc-whitepaper-alpha-0.6.pdf" target="_blank">查看白皮书</a>
+			<a class="btn right" href="./wmc-alpha-0.7.pdf" target="_blank">查看白皮书</a>
 		</div>
 	</div>
 </div>
@@ -213,7 +213,7 @@
 			<div class="left">
 				<h3>相关链接</h3>
 				<a href="https://github.com/WeMediaChain" target="_blank">Github</a>
-				<a href="https://etherscan.io/token/0x47427a4921bdf2b3ac75ecf53193a5265af4a12f" target="_blank">智能合约</a>
+				<a href="https://etherscan.io/token/0x50fb0758dd833a408febf768b566ba1e968d853a" target="_blank">智能合约</a>
 			</div>
 			<div class="right">
 				<h3>联系我们</h3>
