更换白皮书

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<a class="link" :class="{'active': activeMenu[1] === true}" @click.stop="clickBtn('1')">关于我们</a>
 								<ul class="subMenu" :class="{'subMenuActive': activeMenu[1]}">
 									<li><a href="./page/aboutme.html">WMC愿景</a></li>
-									<li><a href="./wmc-alpha-0.8.2.pdf" download="">白皮书</a></li>
+									<li><a href="./wemediachain-0.8.pdf" download="">白皮书</a></li>
 								</ul>
 							</li>
 							<li class="navList"><a class="link" href="https://www.jianshu.com/u/16353b4519d9" target="_blank">社区</a></li>
@@ -69,7 +69,7 @@
 					<p class="row">使用加密货币将更安全和公开的展现媒体流量价值，智能合约平台也将促进更丰富的交易模式</p>
 				</div>
 				<div class="btnBox">
-					<a href="./wmc-alpha-0.8.2.pdf" class="btn" download="">白皮书</a>
+					<a href="./wemediachain-0.8.pdf" class="btn" download="">白皮书</a>
 				</div>
 			</div>
 			<img class="arrowDown" src="./img/arrowDown.png" />
@@ -264,7 +264,7 @@
 			<div class="contentTop">
 				<img src="./img/scene@2x.png" class="icon" style="width: 22px;height: 40px;"/>
 				<br>
-				<span class="tip">WMC Pre-Mining阶段</span>
+				<span class="tip">WMCH Pre-Mining阶段</span>
 			</div>
 			<div class="main">
 				<p class="header">用户当前挖矿获得</p>
@@ -297,7 +297,7 @@
 			<img src="./img/intervalWhite.png" />
 			<div class="header">
 				<p>2018年6月28日</p>
-				<p style="margin-top: 10px;">WMC Pre-Mining即将开始</p>
+				<p style="margin-top: 10px;">WMCH Pre-Mining即将开始</p>
 			</div>
 			<button class="btn">敬请期待</button>
 		</section>
@@ -311,7 +311,7 @@
 				<div class="mainBox clearfix">
 					<div class="left">
 						<h3>相关链接</h3>
-						<a href="www.mengxiaozhu.cn" target="_blank">萌小助</a>
+						<a href="http://www.mengxiaozhu.cn" target="_blank">萌小助</a>
 						<a href="https://github.com/WeMediaChain" target="_blank">Github</a>
 						<a href="https://etherscan.io/token/0x50fb0758dd833a408febf768b566ba1e968d853a" target="_blank">智能合约</a>
 					</div>
